// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> UI Snapshot renders with label and labelFor 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
}

.emotion-0 {
  color: #5C5876;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-4 svg {
  display: none;
}

.emotion-2 {
  list-style-type: none;
  margin: 8px 0;
  min-height: 23px;
}

<div
  className="emotion-6 emotion-7"
>
  <label
    className="emotion-0 emotion-1"
    htmlFor="Test For"
  >
    Test Label
  </label>
  <div
    className="emotion-4 emotion-5"
  >
    <svg />
    <ul
      className="emotion-2 emotion-3"
    />
  </div>
</div>
`;

exports[`<Field /> UI Snapshot renders with label prop 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
}

.emotion-0 {
  color: #5C5876;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-4 svg {
  display: none;
}

.emotion-2 {
  list-style-type: none;
  margin: 8px 0;
  min-height: 23px;
}

<div
  className="emotion-6 emotion-7"
>
  <label
    className="emotion-0 emotion-1"
    htmlFor="Test Label"
  >
    Test Label
  </label>
  <div
    className="emotion-4 emotion-5"
  >
    <svg />
    <ul
      className="emotion-2 emotion-3"
    />
  </div>
</div>
`;
